Fix the blue background issue by drawing a black background and by increasing the z-index of the div above it

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html,
 #overlay {
 	color:#FFFFFF;
 	font-weight:bold;
+	z-index: 100;
 }
 
 #home-stats {
